# Veloce

./: README.md  plan.md
backend/: .env.example  README.md  drizzle.config.ts  package.json  part1  part2  pnpm-lock.yaml  veloce.db  vite.config.ts  vitest.config.ts
backend/src/lib/server/: config.ts  extractor.ts  identity.ts  util.ts  ws.ts
backend/src/lib/server/db/: index.ts  schema.ts
backend/src/routes/: +page.svelte
backend/tests/: extractor.test.ts  util.test.ts
core_engine/: Cargo.toml
core_engine/src/: main.rs
extension/: README.md  package.json  pnpm-lock.yaml  postbuild.js  svelte.config.js  vite.config.ts
extension/scripts/: make-icons.mjs
extension/src/: app.css  app.d.ts
extension/src/lib/: wsClient.ts
extension/src/routes/: +layout.svelte  +page.svelte
extension/static/: background.js  content.js  manifest.json
scripts/: setup.sh  veloce.service
