[package]
name = "core_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
